apps/mariadb/mysql-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql-client
  name: mysql-client
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-client
  template:
    metadata:
      name: mysql-client
      annotations:
        kubernetes.io/psp: eks.privileged
      labels:
        app: mysql-client
        version: v1
        istio: monitor
    spec:
      containers:
      - args:
        - /bin/bash
        image: mysql:5.7
        imagePullPolicy: Always
        name: mysql-client
        stdin: true
        stdinOnce: true
        tty: true
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql-client
  name: mysql-client
  namespace: default
spec:
  type: NodePort
  selector:
    app: mysql-client
  ports:
  - protocol: TCP
    name: nwtool
    port: 9999
    targetPort: 9999
