apps/mariadb/serviceentry-2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: google
spec:
  hosts:
  - google.com
  ports:
  - number: 443
    name: https
    protocol: TCP
  resolution: DNS
  location: MESH_EXTERNAL
